dorsey upgrades for cassandra, presto, github ssh keys